# risk-kit

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: conf.py  index.rst  quickstart.rst  visualization.rst
docs/api/: estimators.rst  index.rst  models.rst  validation.rst
docs/examples/: iris_example.md  iris_example.rst
scripts/: format_and_check.sh  test.sh
src/risk_kit/: __init__.py
src/risk_kit/expert_scorecard/: __init__.py  estimators.py
src/risk_kit/expert_scorecard/models/: __init__.py  bucket.py  expert_scorecard.py  feature.py  scorecard.py
src/risk_kit/expert_scorecard/validation/: __init__.py  registry.py  validation_registry.py  validator.py  validators.py
src/risk_kit/expert_scorecard/visualisation/: __init__.py  visualiser.py
tests/: __init__.py
tests/expert_scorecard/models/: test_bucket.py
tests/expert_scorecard/validation/: test_registry.py
