[tool.poetry]
name = "risk-kit"
version = "0.0.1"
description = "Open Source Python Package For Expert Risk Scorecards"
authors = ["Sean Hickey <sean.hickey@wayflyer.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "risk_kit" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
