[tool.poetry]
name = "risk-kit"
version = "0.0.1"
description = "Open Source Python Package For Expert Risk Scorecards"
authors = ["Sean Hickey <sean.hickey@wayflyer.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "risk_kit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2"


[tool.poetry.group.ui.dependencies]
streamlit = "^1.48.1"


[tool.poetry.group.dev.dependencies]
tox = "^4.28.4"
pytest = "^8.4.1"
mypy = "^1.17.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
Homepage = "https://github.com/sean-hickey-wf/risk-kit"
Documentation = "https://risk-kit.readthedocs.io"
Repository = "https://github.com/sean-hickey-wf/risk-kit"
"Bug Tracker" = "https://github.com/sean-hickey-wf/risk-kit/issues"

[tool.poetry.scripts]
risk-kit = "risk_kit.cli:main"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
