[tool.poetry]
name = "risk-kit"
version = "0.0.3"
description = "Open Source Python Package For Expert Risk Scorecards"
authors = ["Sean Hickey <sean.hickey@wayflyer.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "risk_kit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pydantic = "^2"
scikit-learn = ">=1.0.0"
pandas = ">=1.3.0"
numpy = ">=1.20.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.28.4"
pytest = "^8.4.1"
mypy = "^1.17.1"
ipykernel = "^6.30.1"
pandas-stubs = "^2.3.0.250703"
logot = "^1.5.1"
pytest-cov = "^6.2.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
sphinx = { version = "^8.2.3", python = "^3.12" }
sphinx-autobuild = { version = "^2024.10.3", python = "^3.12" }
myst-nb = { version = "^1.3.0", python = "^3.12" }
sphinx-copybutton = { version = "^0.5.2", python = "^3.12" }
furo = {version = "^2025.7.19", python = "^3.12"}



[tool.poetry.group.viz.dependencies]
plotly = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
Homepage = "https://github.com/sean-hickey-wf/risk-kit"
Documentation = "https://risk-kit.readthedocs.io"
Repository = "https://github.com/sean-hickey-wf/risk-kit"
"Bug Tracker" = "https://github.com/sean-hickey-wf/risk-kit/issues"

[tool.poetry.scripts]
risk-kit = "risk_kit.cli:main"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
